# rust-base-2025

./: Cargo.toml  README.md  config.toml  diesel.toml
back-end/: Cargo.toml  README.md  config.yml  diesel.toml
back-end/migrations/2025-02-11-042208_init_database/: down.sql  up.sql
back-end/migrations/2025-02-18-025659_init_database/: up.sql
back-end/migrations/2025-03-11-025109_init_database/: up.sql
back-end/src/: config.rs  db_pool.rs  lib.rs  main.rs  routes.rs  schema.rs
back-end/src/apps/axum/: error.rs  mod.rs  routes.rs  state.rs
back-end/src/apps/axum/handlers/: auth.rs  users.rs
back-end/src/apps/axum/middlewares/: layer.rs  mod.rs
back-end/src/apps/axum/traits/: mod.rs
back-end/src/cache/: mod.rs  redis.rs
back-end/src/container/: mod.rs
back-end/src/diesel_impl/: db_pool.rs  error.rs  mod.rs  tokens.rs  user.rs
back-end/src/middleware/: layer.rs  mod.rs  rate_limiting_middleware.rs
back-end/src/modules/: mod.rs
back-end/src/modules/auth/: api.rs  handler.rs  mod.rs  model.rs  repository.rs  security.rs  service.rs
back-end/src/modules/traits/: mod.rs  params_body.rs  params_path.rs  params_query.rs
back-end/src/modules/user/: api.rs  handle.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
back-end/src/utils/: api_trait.rs  extractor_body.rs  extractor_path.rs  extractor_query.rs  json_extractor.rs  mod.rs  path_extractor.rs
mysql/: base.sql
proto/: file_service.proto
quic-file-service/: Cargo.toml
quic-file-service/src/: lib.rs  quic_service.rs
support-macro/: Cargo.toml
(+1 files in other folders)
