[package]
name = "back-end"
version = "0.1.0"
edition = "2021"


[dependencies]
axum ={version = "0.8.1", features = ["multipart"]} 
tower = "0.5.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.80"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util= "0.3.31"
lazy_static= "1.5.0"
jsonwebtoken="9"
uuid= {version = "1.12.0", features = ["v4"]}
time= "0.3"
serde_yaml= "0.9"
chrono="0.4.0"

#hash
sha2= "0.10.8"
hex="0.4.3"

# support diesel
diesel={version= "2.2.7" , features=["mysql","chrono","r2d2"]}

# support OpenAPI
utoipa="5.3.0"
utoipa-swagger-ui="9.0.0"
support-macro= { path = "../support-macro" }


# cache
redis= "0.28.1"